<resources>
    <string name="app_name">Hotel Finder</string>
    <string name="mbale_resort_hotel">Mbale Resort Hotel</string>
    <string name="mbale_uganda">Mbale Uganda</string>
    <string name="mbale_resort_booking">Book</string>
    <string name="mbale_resort_details">Details</string>
    <string name="Mt.Elgon_hotel">Mount Elgon Hotel</string>
    <string name="elgon_hotel_booking">Booking</string>
    <string name="elgon_hotel_details">Details</string>
    <string name="wash_and_wills">Wash and Wills Hotel</string>
    <string name="wash_and_wills_booking">Booking</string>
    <string name="wash_and_wills_details">Details</string>
    <string name="pretoria_hotel">Pretoria Hotel</string>
    <string name="pretoria_booking">Booking</string>
    <string name="pretoria_details">Details</string>
    <string name="add_hotel">Hotel Add</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="district_name">District Name</string>
    <string name="region_name">Region Name</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="hotel_contacts">Hotel Contacts</string>
    <string name="services_offered">Services Offered</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="Persons_hotel">Person Details</string>
    <string name="firstName_persons_details">First Name</string>
    <string name="last_name_persons_details">Last Name</string>
    <string name="gender_persons_details">Gender</string>
    <string name="nationality_persons_details">Nationality</string>
    <string name="email_persons_details">Email</string>
    <string name="designation_persons_details">Designation</string>
    <string name="location_person_details">Location</string>
    <string name="contacts_persons_details">Contacts</string>
    <string name="submit_button">Submit</string>
    <string name="male_person_details">Male</string>
    <string name="female_persons_details">Female</string>
    <string name="hotel_finder_detailed_activity">Hotel Details</string>
    <string name="action_settings">Settings</string>
    <string name="restaurant">Restaurant</string>
    <string name="accommodation">Accommodation</string>
    <string name="health_and_leisure"> Leisure</string>
    <string name="conference">Conference Hall</string>
    <string name="title_activity_hotel_details">Hotel Details</string>
    <string name="Simple_description">Simple Hotel Description</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_fragment_main">FragmentMainActivity</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="details">Details</string>
    <string name="title_activity_kasan">KasanActivity</string>
    <string name="book_now">Book Now</string>
    <string name="services">Services</string>
    <string name="add_rooms">Add Rooms</string>
    <string name="title_activity_add_room">AddRoomActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="enter">Enter</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="room_type">Room Type</string>
    <string name="room_costs">Room Costs</string>
    <string name="button_add">Add</string>
    <string name="up_load_image">Upload Photo</string>
    <string name="number_of_nights">Number of Nights</string>
    <string name="total">Total :</string>
    <string name="client_name">Your name</string>
    <string name="client_nationality">Nationality</string>
    <string name="client_email">Email</string>
    <string name="client_contacts">Contacts</string>
    <string name="reserve_button">Reserve</string>
    <string name="upload_hotel_photo">Upload hotel Photos</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="date_cancel">Cancel</string>
    <string name="date_clear">Clear</string>
    <string name="date_set">Set</string>
    <string name="booking">Booking</string>
    <string name="swimming">Swimming Pool</string>
    <string name="gym">Gym</string>
    <string name="movie">Movie Center</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
