<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lwembawo.hotelfinder.RoomsActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download_children" />

    <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:text="@string/room_type"
                 />

            <EditText
                android:id="@+id/edAddRoomType"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginTop="6dp"
                 />

            <TextView
                android:layout_marginLeft="15dp"
               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_costs"
                android:layout_marginTop="6dp"
                android:textColor="@android:color/black"/>
       <EditText
           android:id="@+id/edAddRoomCost"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="textPersonName"
           />
            <TextView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_load_image"
                android:layout_marginTop="6dp"
                android:textColor="@android:color/black"/>


            <ImageButton
                android:id="@+id/imageButtonUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_upload"
                />

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edAddRoomType"
                android:onClick="OnAddRoom"/>





        </LinearLayout>
    </ScrollView>
    </LinearLayout>


